# plug-in

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
sample/sample_app_1/: api.py  base.py  config.py  entities.py  impl.py
src/plug_in/: __init__.py
src/plug_in/boot/: root.py
src/plug_in/boot/builder/: builder.py  facade.py  proto.py  selector.py
src/plug_in/core/: host.py  plug.py  plugin.py  registry.py
src/plug_in/exc/: __init__.py
src/plug_in/ioc/: hosting.py  parameter.py  resolve.py  resolver.py  router.py
src/plug_in/proto/: core_host.py  core_plug.py  core_plugin.py  core_registry.py
src/plug_in/tools/: introspect.py
src/plug_in/types/proto/: core_host.py  core_plugin.py  core_registry.py  router.py
tests/: conftest.py
tests/core/module/: test_injection.py
tests/core/unit/: test_core_plugin.py  test_host.py  test_registry.py
tests/module/: test_registry.py  test_routing.py
tests/module/by_app_usage/: test_sample_app_1.py
tests/unit/boot/: test_plug_selector.py
tests/unit/core/: test_core_plugin.py
tests/unit/tools/: test_introspect.py
